--- a/pml-coursera-project.Rmd
+++ b/pml-coursera-project.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Practical Machine Learning - Coursera"
-author: "Vidya Cuddalore Arivudainambi"
-date: "7 January 2017"
+author: "Jun Hwang"
+date: "24 July 2021"
 output: html_document
 ---
 
